--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+networks:
+  caddy:
 services:
   remark:
     build:
@@ -15,7 +17,7 @@ services:
     expose:
       - "8080"
     environment:
-      - REMARK_URL=http://localhost:2015/remark
+      - REMARK_URL=https://localhost/remark
       - SECRET=12345
       - DEBUG=true
       - AUTH_ANON=true
@@ -24,20 +26,28 @@ services:
       - VOTES_IP=true
     volumes:
       - ./var:/srv/var
+    networks:
+      - caddy
   shiny:
     build: ./shiny-app
     image: atlasview/shiny:latest
     restart: unless-stopped
     expose:
       - "3838"
+    networks:
+      - caddy
   caddy:
     image: caddy:2.6.4-alpine
     restart: unless-stopped
     ports:
-      - "2015:2015"
+      - "80:80"
+      - "443:443"
     volumes:
       - ./caddyserver/Caddyfile:/etc/caddy/Caddyfile 
+      - ./caddyserver/certs:/etc/caddy/certs
     depends_on:
       - shiny
       - remark
+    networks:
+      - caddy
 
