--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,10 @@ services:
     build: ./shiny-app
     image: atlasview/shiny:latest
     restart: unless-stopped
+    environment:
+      - ATLASVIEW_DATA_PATH=/etc/shiny-app/data
+    volumes:
+      - "/Users/tamuri/University College London/Torralbo, Ana - atlasview:/etc/shiny-app/data"
     expose:
       - "3838"
     networks:
