--- a/caddyserver/Caddyfile
+++ b/caddyserver/Caddyfile
@@ -16,7 +16,7 @@ localhost {
 
     handle {
         reverse_proxy shiny:3838 {
-            header_up AtlasView-User "{http.auth.user.id}"
+            header_up ATLASVIEW_USER "{http.auth.user.id}"
         }
     }
 
