--- a/shiny-app/DESCRIPTION
+++ b/shiny-app/DESCRIPTION
@@ -10,3 +10,34 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports:
+    circlize,
+    data.table,
+    dplyr,
+    ggiraph,
+    ggplot2,
+    grid,
+    gridExtra,
+    gridExtra,
+    hablar,
+    Hmisc,
+    magrittr,
+    patchwork,
+    png,
+    RColorBrewer,
+    Rcpp,
+    readr,
+    readr,
+    recogito,
+    rms,
+    scales,
+    shiny,
+    shinybusy,
+    shinydashboard,
+    shinyjs,
+    stringr,
+    survival,
+    svglite,
+    svgPanZoom,
+    tibble,
+    tidyr
