--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./caddyserver/Caddyfile:/etc/caddy/Caddyfile 
-      - ./caddyserver/certs:/etc/caddy/certs
+      - ./caddyserver:/etc/caddy
     depends_on:
       - shiny
       - remark
