--- a/shiny-app/DESCRIPTION
+++ b/shiny-app/DESCRIPTION
@@ -13,6 +13,7 @@ RoxygenNote: 7.2.3
 Imports:
     circlize,
     data.table,
+    digest,
     dplyr,
     ggiraph,
     ggplot2,
@@ -21,6 +22,7 @@ Imports:
     gridExtra,
     hablar,
     Hmisc,
+    jose,
     magrittr,
     patchwork,
     png,
@@ -34,6 +36,7 @@ Imports:
     shiny,
     shinybusy,
     shinydashboard,
+    shinymanager,
     shinyjs,
     stringr,
     survival,
