checkpoint - can login successfully. can't set cookies to login again! (or change user)

--- a/caddyserver/Caddyfile
+++ b/caddyserver/Caddyfile
@@ -6,7 +6,7 @@ localhost {
     handle_path /remark/* {
         abort /auth/logout
         abort /logout
-        abort /auth/anonymous
+        rewrite /login /auth/anonymous/login?site=atlasview&user={http.auth.user.id}&aud=atlasview 
         reverse_proxy remark:8080
     }
 
