--- a/caddyserver/Caddyfile
+++ b/caddyserver/Caddyfile
@@ -4,16 +4,14 @@ localhost {
     tls /etc/caddy/certs/localhost.crt /etc/caddy/certs/localhost.key
 
     handle_path /remark/* {
-        abort /auth/logout
+        # block logging in/out from the outside
         abort /logout
-        rewrite /login /auth/anonymous/login?site=atlasview&user={http.auth.user.id}&aud=atlasview 
+        abort /auth/anonymous
         reverse_proxy remark:8080
     }
 
     handle {
-        reverse_proxy shiny:3838 {
-            header_up ATLASVIEW_USER "{http.auth.user.id}"
-        }
+        reverse_proxy shiny:3838
     }
     
 }
