simplify container for shiny app by using shiny-verse image

--- a/shiny-app/Dockerfile
+++ b/shiny-app/Dockerfile
@@ -1,25 +1,20 @@
-FROM rocker/r-ver:4
+FROM rocker/shiny-verse:4
 
-# some R packages need to be built from source
-RUN apt update && apt install -y git-core libcurl4-openssl-dev libgit2-dev libicu-dev libssl-dev libxml2-dev make pandoc pandoc-citeproc libfontconfig1-dev libharfbuzz-dev libfribidi-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev unixodbc-dev fontconfig fonts-liberation && rm -rf /var/lib/apt/lists/*
-RUN fc-cache -f -v
-  RUN echo "options(repos = c(CRAN = 'http://cran.rstudio.com/'), download.file.method = 'libcurl', Ncpus = 4)" >> /usr/local/lib/R/etc/Rprofile.site
+# should already be installed in base image
+RUN install2.r --error --skipinstalled --ncpus 1 \
+    data.table devtools dplyr ggplot2 grid RColorBrewer Rcpp readr scales shiny stringr survival tibble tidyr
 
-# littler helper script provided by rocker image to install R packages (some binary)
-RUN install2.r circlize readr stringr svglite dplyr shiny shinydashboard shinybusy svgPanZoom recogito devtools
-RUN install2.r tibble data.table ggplot2 survival rms Hmisc scales RColorBrewer gridExtra hablar gridExtra png grid dplyr tidyr ggiraph Rcpp patchwork
-RUN install2.r shinyjs
-RUN install2.r jose
-RUN install2.r cookies
-RUN install2.r shinymanager
+# additional packages needed for atlasview app
+RUN install2.r --error --skipinstalled --ncpus 1 \ 
+    circlize cookies ggiraph gridExtra hablar Hmisc jose patchwork png recogito rms shinybusy shinydashboard shinyjs shinymanager svgPanZoom svglite
 
-# atlasview shiny app
+# install the atlasview shiny app
 RUN mkdir /build_zone
 ADD . /build_zone
 WORKDIR /build_zone
 
 # we don't want to use renv for the docker container (packages already install above)
-# otherwise, we image build takes long time every time shiny app changes
+# otherwise, the image build takes long time every time shiny app changes
 RUN rm .Rprofile
 
 EXPOSE 3838
