Fix comment URLs so user can click on link and go directly to comments page for the disease - still has to login again, because it's a new window and shiny apps are SPAs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - SITE=atlasview
       - ANON_VOTE=true
       - VOTES_IP=true
+      - ALLOWED_HOSTS=${SITE_ADDRESS}
     volumes:
       - ../atlasview-data/remark:/srv/var
     networks:
