--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: self-hosted
     env:
       WORKDIR: /home/ubuntu/atlasview
+      DATADIR: /home/ubuntu/atlasview-data
 
     steps:
     - name: Move to atlasview working directory
@@ -17,6 +18,9 @@ jobs:
         if [ ! -f .env ]; then
           cp .env.example .env
         fi
+
+    - name: Link data directory to runner work directory
+      run: ln -s $DATADIR ../atlasview-data
 
     - name: Check that docker is installed
       run: sudo docker --version
