Re-build all docker containers
This ensures all containers are always present.
Worth the little extra wait time I think.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,4 +35,4 @@ jobs:
       run: sudo docker --version
 
     - name: Build the docker images
-      run: sudo docker compose up -d --build --no-deps shiny
+      run: sudo docker compose up -d --build
