--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
     - name: Deploy
       run: ./deployment/deploy.sh
-      working-directory: /home/ubuntu/atlasview
+
