--- a/provisioning/Vagrantfile
+++ b/provisioning/Vagrantfile
@@ -9,6 +9,6 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
 	ansible.verbose = "v"
-	ansible.playbook = "provisioning/playbook.yml"
+	ansible.playbook = "playbook.yml"
   end
 end
