--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -4,5 +4,6 @@ vagrants:
   vars:
       ansible_host: 127.0.0.1
       ansible_port: 2222
+      ansible_user: vagrant
       ansible_connection: ssh
       ansible_ssh_private_key_file: .vagrant/machines/default/vmware_fusion/private_key
