Use separate `.env_ansible` file to store GH PAT
Avoid storing it in `.env` which will get copied to the remote runner.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment variables for the AtlasView application
+# This file will get copied to the host, so don't put any personal tokens here!
 ATLASVIEW_SITE_ADDRESS=localhost
 REMARK42_SECRET=123456890
 REMARK42_ADMIN_PASSWD=password
-
