--- a/provisioning/roles/gha-runner/tasks/main.yml
+++ b/provisioning/roles/gha-runner/tasks/main.yml
@@ -7,10 +7,10 @@
     shell: /bin/bash
 
 - name: Setup GHA runner
-  include_role:
+  ansible.builtin.include_role:
     name: monolithprojects.github_actions_runner
   vars:
-    access_token: "{{ lookup('env','PAT') }}"
+    access_token: "{{ lookup('env', 'GH_PAT') }}"
     runner_dir: /opt/actions-runner/{{ github_account }}/{{ github_repo }}
   tags:
     - uninstall  # To uninstall the runner with ansible-playbook playbook.yml --tags uninstall
