--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -7,3 +7,4 @@ dev:
       ansible_user: vagrant
       ansible_connection: ssh
       ansible_ssh_private_key_file: .vagrant/machines/default/vmware_fusion/private_key
+      github_account: milanmlft
