Add note regarding ansible-vault

--- a/provisioning/roles/gha-runner/tasks/main.yml
+++ b/provisioning/roles/gha-runner/tasks/main.yml
@@ -10,6 +10,7 @@
   ansible.builtin.include_role:
     name: monolithprojects.github_actions_runner
   vars:
+    # FIXME: use `ansible-vault` to encrypt this variable instead
     access_token: "{{ lookup('env', 'GH_PAT') }}"
     runner_dir: /opt/actions-runner/{{ github_account }}/{{ github_repo }}
   tags:
