--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -8,3 +8,4 @@ dev:
       ansible_connection: ssh
       ansible_ssh_private_key_file: .vagrant/machines/default/vmware_fusion/private_key
       github_account: milanmlft
+      github_repo: atlasview
