--- a/provisioning/roles/atlasview-dirs/vars/main.yml
+++ b/provisioning/roles/atlasview-dirs/vars/main.yml
@@ -1,1 +1,10 @@
 atlasview_root: "{{ ansible_env.HOME }}"
+
+remote:
+  atlasview_main: "{{ atlasview_root }}/atlasview"
+  atlasview_data: "{{ atlasview_root }}/atlasview-data"
+  atlasview_env: "{{ atlasview_root }}/atlasview/.env"
+
+local:
+  atlasview_data: "{{ playbook_dir }}/../../atlasview-data"
+  atlasview_env: "{{ playbook_dir }}/../.env"
