--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,6 +14,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-tags: true
+        submodules: true
 
     - name: Deploy
       run: ./deployment/deploy.sh
