--- a/provisioning/roles/atlasview-dirs/tasks/main.yml
+++ b/provisioning/roles/atlasview-dirs/tasks/main.yml
@@ -15,3 +15,9 @@
     src: "{{ local.atlasview_env }}"
     dest: "{{ remote.atlasview_env }}"
     mode: "0644"
+
+- name: Create atlasview-backups directory
+  ansible.builtin.file:
+    path: "{{ remote.atlasview_backups }}/comments"
+    state: directory
+    mode: "0755"
