Clone the atlasview repo from `main`
Went back and forth with this a few times, but seems that this is the
best way to set up subsequent steps:

- Setting up remark42
- Setting up cron job for backup script

--- a/provisioning/roles/atlasview-dirs/tasks/main.yml
+++ b/provisioning/roles/atlasview-dirs/tasks/main.yml
@@ -1,8 +1,8 @@
-- name: Create atlasview placeholder directory
-  ansible.builtin.file:
-    path: "{{ remote.atlasview_main }}"
-    state: directory
-    mode: "0755"
+- name: Clone atlasview repo
+  ansible.builtin.git:
+    repo: "git@github.com:{{ atlasview_repo }}.git"
+    dest: "{{ remote.atlasview_main }}"
+    version: "main"
 
 - name: Copy local atlasview-data directory
   ansible.builtin.copy:
