--- a/provisioning/roles/atlasview-dirs/vars/main.yml
+++ b/provisioning/roles/atlasview-dirs/vars/main.yml
@@ -1,4 +1,5 @@
 atlasview_root: "{{ ansible_env.HOME }}"
+atlasview_repo: "{{ github_account }}/{{ github_repo }}"
 
 remote:
   atlasview_main: "{{ atlasview_root }}/atlasview"
