--- a/provisioning/roles/atlasview/vars/main.yml
+++ b/provisioning/roles/atlasview/vars/main.yml
@@ -12,3 +12,6 @@ local:
   atlasview_env: "{{ playbook_dir }}/../.env"
 
 setup_remark42: "setup-remark42.sh"
+
+atlasview_backup_script: "{{ remote.atlasview_main }}/deployment/do-backup.sh"
+atlasview_crontab_out: "{{ atlasview_root }}/crontab.out"
