Env variables need `export`

--- a/provisioning/.env_ansible.example
+++ b/provisioning/.env_ansible.example
@@ -1,4 +1,4 @@
 # GitHub Personal Access Token, set this to your personal PAT
 # Used to set up the GHA runner
 # https://github.com/settings/tokens/new
-GH_PAT=
+export GH_PAT=
