--- a/provisioning/roles/ssh-keys/vars/main.yml
+++ b/provisioning/roles/ssh-keys/vars/main.yml
@@ -3,3 +3,5 @@ key_path: "{{ home_dir }}/.ssh/id_rsa.git"
 ssh_config_path: "{{ home_dir }}/.ssh/config"
 known_hosts_path: "{{ home_dir }}/.ssh/known_hosts"
 key_title: "atlasview-host-ssh"
+
+github_token: "{{ lookup('ansible.builtin.env', 'GH_PAT') }}"
