Force git clone of atlasview repo

--- a/provisioning/roles/atlasview/tasks/main.yml
+++ b/provisioning/roles/atlasview/tasks/main.yml
@@ -3,6 +3,7 @@
     repo: "git@github.com:{{ atlasview_repo }}.git"
     dest: "{{ remote.atlasview_main }}"
     version: "main"
+    force: true
 
 - name: Copy local atlasview-data directory
   ansible.builtin.copy:
