--- a/shiny-app/DESCRIPTION
+++ b/shiny-app/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: atlasview
-Title: What the Package Does (One Line, Title Case)
+Title: View the Co-Occurring Disease Results from the Disease Atlas
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+  c(
+    person("Asif", "Tamuri", , "a.tamur@ucl.ac.uk", role = c("aut", "cre")),
+    person("Milan", "Malfait", , "m.malfait@ucl.ac.uk", role = c("aut"))
+  )
+Description: The purpose of this app is to get the views of 
+        clinicians on the co-occurring disease results in the Disease Atlas.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
