--- a/shiny-app/DESCRIPTION
+++ b/shiny-app/DESCRIPTION
@@ -17,24 +17,11 @@ Imports:
     data.table,
     digest,
     dplyr,
-    ggiraph,
     ggplot2,
-    grid,
-    gridExtra,
-    gridExtra,
-    hablar,
-    Hmisc,
     jose,
     magrittr,
     patchwork,
-    png,
-    RColorBrewer,
-    Rcpp,
     readr,
-    readr,
-    recogito,
-    rms,
-    scales,
     shiny,
     shinybusy,
     shinydashboard,
@@ -42,8 +29,5 @@ Imports:
     shinytitle,
     shinyjs,
     stringr,
-    survival,
     svglite,
-    svgPanZoom,
-    tibble,
-    tidyr
+    svgPanZoom
