Use `rlang::.data$` when referring to data variables
Avoids `"no visible binding for global binding"` notes in `R CMD check`.

--- a/shiny-app/NAMESPACE
+++ b/shiny-app/NAMESPACE
@@ -6,5 +6,6 @@ import(shiny)
 importFrom(grDevices,adjustcolor)
 importFrom(grDevices,dev.off)
 importFrom(graphics,text)
+importFrom(rlang,.data)
 importFrom(stats,setNames)
 importFrom(utils,head)
