--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Set up R
+      uses: r-lib/actions/setup-r@v2
+
+    - name: Install dependencies
+      run: |
+        R -e 'install.packages(c("usethis", "gert", "desc"))'
+
+    - name: Bump shiny-app package version
+      run: Rscript ./deployment/update-shiny-app-version.R
+
     - name: Deploy
       run: ./deployment/deploy.sh
-
