--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,9 +16,13 @@ jobs:
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
-        R -e 'install.packages(c("usethis", "gert", "desc"))'
+        sudo apt-get update -y
+        sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libgit2-dev
+
+    - name: Install R dependencies
+      run: Rscript -e 'install.packages(c("usethis", "desc", "gert"))'
 
     - name: Bump shiny-app package version
       run: Rscript ./deployment/update-shiny-app-version.R
