--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -1,9 +1,16 @@
 devel:
   hosts:
     vagrant:
+      ansible_host: 127.0.0.1
+      ansible_port: 2222
+      ansible_user: vagrant
+      ansible_ssh_private_key_file: .vagrant/machines/default/vmware_fusion/private_key
+
+    milanmlft-ec2:
+      ansible_host: ubuntu@ec2-35-179-96-107.eu-west-2.compute.amazonaws.com
+      ansible_user: ubuntu
+      ansible_ssh_private_key_file: ../../atlasview-ssh/atlasview-ssh.pem
+
+  # Variables for all hosts
   vars:
-    ansible_host: 127.0.0.1
-    ansible_port: 2222
-    ansible_user: vagrant
     ansible_connection: ssh
-    ansible_ssh_private_key_file: .vagrant/machines/default/vmware_fusion/private_key
