--- a/shiny-app/DESCRIPTION
+++ b/shiny-app/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
   )
 Description: The purpose of this app is to get the views of
         clinicians on the co-occurring disease results in the Disease Atlas.
-License: MIT + file LICENSE
+License: file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
