--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -1,3 +1,10 @@
+main:
+  hosts:
+    tamuri-ec2:
+      ansible_host: ubuntu@ec2-35-178-24-215.eu-west-2.compute.amazonaws.com
+      ansible_user: ubuntu
+      ansible_ssh_private_key_file: ../../atlasview-ssh/tamuri-atlasview.pem
+      
 devel:
   hosts:
     vagrant:
@@ -9,7 +16,7 @@ devel:
     milanmlft-ec2:
       ansible_host: ubuntu@ec2-18-168-254-247.eu-west-2.compute.amazonaws.com
       ansible_user: ubuntu
-      ansible_ssh_private_key_file: ../../atlasview-ssh/atlasview-ssh.pem
+      ansible_ssh_private_key_file: ../../atlasview-ssh/milanmlft-atlasview.pem
 
   # Variables for all hosts
   vars:
