--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,7 +24,7 @@ jobs:
         sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libgit2-dev
 
     - name: Install R dependencies
-      run: Rscript -e 'install.packages(c("usethis", "desc", "gert"))'
+      run: Rscript -e 'install.packages(c("usethis", "desc", "gert"), lib = "/opt/R/4.3.1/lib/R/library")'
 
     - name: Bump shiny-app package version
       run: Rscript ./deployment/update-shiny-app-version.R
