--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,7 +27,10 @@ jobs:
       run: Rscript -e 'install.packages(c("usethis", "desc", "gert"), lib = "/home/ubuntu/R/x86_64-pc-linux-gnu-library/4.3")'
 
     - name: Bump shiny-app package version
-      run: Rscript ./deployment/update-shiny-app-version.R
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        Rscript ./deployment/update-shiny-app-version.R
 
     - name: Deploy
       run: ./deployment/deploy.sh
