Run cron job as user, not root

--- a/provisioning/roles/atlasview/tasks/cron-jobs.yml
+++ b/provisioning/roles/atlasview/tasks/cron-jobs.yml
@@ -4,3 +4,4 @@
     minute: "0"
     hour: "*/6"
     job: "{{ atlasview_backup_script }} >> {{ atlasview_crontab_out }} 2>&1"
+    user: "{{ ansible_user }}"
