--- a/provisioning/roles/docker/tasks/main.yml
+++ b/provisioning/roles/docker/tasks/main.yml
@@ -31,3 +31,15 @@
     name: docker-ce
     state: latest
     update_cache: true
+
+- name: Allow running Docker as non-root user
+  block:
+    - name: Ensure group docker exists
+      ansible.builtin.group:
+        name: docker
+        state: present
+    - name: Add user to docker group
+      ansible.builtin.user:
+        name: "{{ ansible_user }}"
+        groups: docker
+        append: true
