Use devel branch on devel hosts

--- a/provisioning/roles/atlasview/tasks/main.yml
+++ b/provisioning/roles/atlasview/tasks/main.yml
@@ -2,7 +2,7 @@
   ansible.builtin.git:
     repo: "git@github.com:{{ atlasview_repo }}.git"
     dest: "{{ remote.atlasview_main }}"
-    version: "main"
+    version: "{{ atlasview_branch }}"
     force: true
 
 - name: Copy local atlasview-data files
