--- a/provisioning/roles/atlasview/tasks/do-backup-cron.yml
+++ b/provisioning/roles/atlasview/tasks/do-backup-cron.yml
@@ -1,3 +1,8 @@
+- name: Ensure pip is installed
+  ansible.builtin.package:
+    name: python3-pip
+    state: present
+
 - name: Ensure Python dependencies are installed
   ansible.builtin.pip:
     name:
