Call `rotate-backups` task from `atlasview` role

--- a/provisioning/roles/atlasview/tasks/main.yml
+++ b/provisioning/roles/atlasview/tasks/main.yml
@@ -34,3 +34,6 @@
 
 - name: Set up backups cron job
   ansible.builtin.include_tasks: do-backup-cron.yml
+
+- name: Set up backup rotation
+  ansible.builtin.include_tasks: rotate-backups.yml
