Write crontab output

--- a/provisioning/roles/atlasview/tasks/rotate-backups.yml
+++ b/provisioning/roles/atlasview/tasks/rotate-backups.yml
@@ -16,6 +16,6 @@
     minute: "0"
     hour: "0"
     day: "*"
-    job: "rotate-backups -c {{ atlasview_rotate_backups_config }} {{ remote.atlasview_backups }}"
+    job: "rotate-backups -c {{ atlasview_rotate_backups_config }} {{ remote.atlasview_backups }} >> {{ atlasview_crontab_out }} 2>&1"
     user: "{{ ansible_user }}"
     state: present
